created a new folder

--- a/client-web/package.json
+++ b/client-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clientweb",
+  "name": "client-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,10 +10,16 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "material-ui-chip-input": "^1.1.0",
+    "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-file-base64": "^1.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
