--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^8.2.0
   file_picker: ^4.5.1
   path_provider: ^2.0.9
+  url_launcher: ^6.1.0
 
 dev_dependencies:
   flutter_test:
