--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   file_picker: ^4.5.1
   path_provider: ^2.0.9
   url_launcher: ^6.1.0
+  cached_memory_image: ^1.2.1
 
 dev_dependencies:
   flutter_test:
