--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "material-ui-chip-input": "^1.1.0",
     "moment": "^2.27.0",
     "react": "^16.12.0",
+    "react-base64-downloader": "^2.1.7",
     "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.1.25",
