--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mern-stack-client",
+  "name": "slbfe-web-client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://memories-project-part4.herokuapp.com/",
+  "proxy": "https://slbfe-api-app.herokuapp.com/",
   "dependencies": {
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
@@ -18,10 +18,10 @@
     "react-base64-downloader": "^2.1.7",
     "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
-    "react-google-login": "^5.1.25",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-slideshow-image": "^3.7.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
