--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,8 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.29",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "xml": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
